--- a/package.json
+++ b/package.json
@@ -4,23 +4,20 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@types/react": "~18.2.79",
     "expo": "~51.0.28",
-    "expo-blur": "^13.0.2",
-    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "typescript": "~5.3.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "reactotron-react-native": "^5.1.8"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
